--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div id="app">
         <h1>Mail list</h1>
-        <ul v-for="mail in mailList">
-            <li>{{mail}}</li>
+        <ul>
+            <li v-for="mail in mailList">{{mail}}</li>
         </ul>
     </div>
 
